# meridian

./: Cargo.toml  README.md  SPECIFICATION.md
.cargo/: config.toml
.github/: copilot-instructions.md
meridian/: Cargo.toml  build.rs
meridian-common/: Cargo.toml
meridian-common/src/: lib.rs
meridian-ebpf/: Cargo.toml
meridian-ebpf/src/: main.rs
meridian/src/: lib.rs  main.rs  metrics.rs
meridian/tests/: metrics.rs  vfs_probe.rs
