[workspace]
resolver = "2"
members = [
    "meridian",
    "meridian-common",
]
# meridian-ebpf is excluded from default members because it's built
# via aya-build for the BPF target, not the host target
exclude = ["meridian-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/meridian"

[workspace.dependencies]
aya = "0.13"
aya-ebpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"
aya-build = "0.1"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
