[package]
name = "meridian"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
libc = "0.2"
meridian-common = { path = "../meridian-common", features = ["user"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
opentelemetry_sdk = { workspace = true, features = ["testing"] }

[build-dependencies]
anyhow = { workspace = true }

[lib]
name = "meridian"
path = "src/lib.rs"

[[bin]]
name = "meridian"
path = "src/main.rs"

[[bin]]
name = "test_io_helper"
path = "src/bin/test_io_helper.rs"
